# path-of-elixe

take_home_project_poe/: .gitignore  config.yaml  filter_payload.json  inspect_model.py  inspect_pickle.py  main.py  poe_cookies_config.json  pyproject.toml  requirements.txt  short_to_full_currency_map.json  take_home_project.ipynb
take_home_project_poe/cache/: currency_fx.bak.pkl  currency_fx.pkl  pickle_average_bak.json  pickle_vwap.json
take_home_project_poe/misc/: aoeah_currencies.csv  aoeah_rates.csv  market_item_listener_bak.py  results.csv  std_cat-weapon__corr-true__n50.parquet  std_cat-weapon__rar-magic__n50.parquet  std_cat-weapon__rar-nonunique__n50.parquet  std_cat-weapon__rar-normal__n50.parquet  std_cat-weapon__rar-rare__n50.parquet  std_cat-weapon__rar-unique__n50.parquet  std_cat-weapon__rar-uniquefoil__n50.parquet
take_home_project_poe/models/wand/: Cursecarver_model.pkl  Enezun's Charge_model.pkl  Lifesprig_model.pkl  Sanguine Diviner_model.pkl  craftables_model.pkl
take_home_project_poe/predictions/undervalued/parq/: undervalued_20250906_161214.parquet
take_home_project_poe/src/data/: constants.py  market_currency_listener.py  market_item_listener.py  market_listener.py
take_home_project_poe/src/preprocessor/: generate_training_data.py
take_home_project_poe/src/preprocessor/scripts/: feature_selection.py  (+5 more)
take_home_project_poe/src/recorder/: constants.py  poe2_currency_recorder.py  poe_currency_mapping.py  poe_currency_recorder.py  poe_trade2_recorder.py  setup_cookies.py
take_home_project_poe/src/research/: generate_training_data.py
(+21 files in other folders)
